// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The header will render for authenticated users 1`] = `
<Fragment>
  <withRouter(Menu)
    onLogOut={[Function]}
  />
  <Invitation
    invite={Array []}
    onAcceptInvite={[Function]}
    onDeclineInvite={[Function]}
  />
  <audio
    src={
      Object {
        "canInstrument": true,
        "createTransformer": [Function],
        "getCacheKey": [Function],
        "getCacheKeyAsync": [Function],
        "process": [Function],
        "processAsync": [Function],
      }
    }
  >
    <track
      kind="captions"
    />
  </audio>
</Fragment>
`;

exports[`The header will render for unauthenticated users 1`] = `
<Fragment>
  <audio
    src={
      Object {
        "canInstrument": true,
        "createTransformer": [Function],
        "getCacheKey": [Function],
        "getCacheKeyAsync": [Function],
        "process": [Function],
        "processAsync": [Function],
      }
    }
  >
    <track
      kind="captions"
    />
  </audio>
</Fragment>
`;
